Documentacion metodos delete
